--- a/CyclingManager.iOS/CyclingManager.iOS.csproj
+++ b/CyclingManager.iOS/CyclingManager.iOS.csproj
@@ -75,38 +75,6 @@
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-02.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-02.imageset\Tutorial-02.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-03.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-03.imageset\Tutorial-03.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-04.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-04.imageset\Tutorial-04.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-05.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-05.imageset\Tutorial-05.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-06.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-06.imageset\Tutorial-06.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-07.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-07.imageset\Tutorial-07.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-08.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-08.imageset\Tutorial-08.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-09.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-09.imageset\Tutorial-09.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-10.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-10.imageset\Tutorial-01.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-11.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-11.imageset\Tutorial-11.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-12.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-12.imageset\Tutorial-12.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-13.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-13.imageset\Tutorial-13.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-14.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-14.imageset\Tutorial-14.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-15.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-15.imageset\Tutorial-15.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-16.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-16.imageset\Tutorial-16.jpg" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-01.imageset\Contents.json" />
-    <ImageAsset Include="Resources\Inspirations.xcassets\Inspiration-01.imageset\Tutorial-10.jpg" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
@@ -119,14 +87,9 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="Extensions\UIImageExtensions.cs" />
     <Compile Include="Controllers\TeamDetailViewController.cs" />
     <Compile Include="Controllers\TeamDetailViewController.designer.cs">
       <DependentUpon>TeamDetailViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\InspirationCell.cs" />
-    <Compile Include="Views\InspirationCell.designer.cs">
-      <DependentUpon>InspirationCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\CyclerTableCell.cs" />
     <Compile Include="Views\CyclerTableCell.designer.cs">
@@ -135,7 +98,6 @@
     <Compile Include="Controllers\CompetitionListViewController.cs" />
     <Compile Include="Views\CompetitionOverviewCell.cs" />
     <Compile Include="Layouts\CompetitionLayout.cs" />
-    <Compile Include="Common\ColorExtensions.cs" />
     <Compile Include="Controllers\TeamListViewController.cs" />
     <Compile Include="Views\TeamOverviewCell.cs" />
     <Compile Include="Layouts\ExpandingItemLayout.cs" />
@@ -153,18 +115,14 @@
     <Compile Include="Controllers\CompetitionListViewController.designer.cs">
       <DependentUpon>CompetitionListViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\ColorExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Layouts\" />
     <Folder Include="Controllers\" />
     <Folder Include="Extensions\" />
-    <Folder Include="Resources\Inspirations.xcassets\" />
     <Folder Include="Views\" />
-    <Folder Include="Common\" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Inspirations.plist" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CyclingManager.Shared\CyclingManager.Shared.csproj">
