--- a/CyclingManager.Android/Properties/AndroidManifest.xml
+++ b/CyclingManager.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="be.trojkasoftware">
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19" />
-	<application android:label="CyclingManager">
-	</application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="be.trojkasoftware.cyclingmanager">
+	<uses-sdk android:minSdkVersion="16" />
+	<application android:label="CyclingManager2"></application>
 </manifest>
