--- a/CyclingManager.Shared/CyclingManager.Shared.csproj
+++ b/CyclingManager.Shared/CyclingManager.Shared.csproj
@@ -30,6 +30,8 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DataProvider\Parsers\AbstractParser.cs" />
+    <Compile Include="DataProvider\Parsers\CountryParser.cs" />
     <Compile Include="DomainModel\Country.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DomainModel\Team.cs" />
@@ -52,6 +54,8 @@
     <EmbeddedResource Include="Resources\user82.png" />
     <EmbeddedResource Include="Resources\bicycles4.png" />
     <EmbeddedResource Include="Resources\flag_france.png" />
-    <EmbeddedResource Include="Resources\DataQueries.xml" />
+    <EmbeddedResource Include="Resources\DataQueries.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
