--- a/CyclingManager.Shared/CyclingManager.Shared.csproj
+++ b/CyclingManager.Shared/CyclingManager.Shared.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Common\Color.cs" />
     <Compile Include="DomainModel\CompetitionResult.cs" />
     <Compile Include="Configuration\Configuration.cs" />
+    <Compile Include="DataProvider\Parsers\TeamParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup />
